RESOLVED FIXED192439
<rdar://problem/45296285> Content blocker rule "raw" blocks media elements form loading
https://bugs.webkit.org/show_bug.cgi?id=192439
Summary <rdar://problem/45296285> Content blocker rule "raw" blocks media elements fo...
Benjamin Poulain
Reported 2018-12-05 16:43:42 PST
<rdar://problem/45296285> Content blocker rule "raw" blocks media elements form loading
Attachments
Patch (11.95 KB, patch)
2018-12-05 16:45 PST, Benjamin Poulain
no flags
Archive of layout-test-results from ews107 for mac-sierra-wk2 (3.48 MB, application/zip)
2018-12-05 19:23 PST, EWS Watchlist
no flags
Patch (6.94 KB, patch)
2018-12-06 18:12 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2018-12-05 16:45:45 PST
Benjamin Poulain
Comment 2 2018-12-05 16:45:47 PST
EWS Watchlist
Comment 3 2018-12-05 19:23:05 PST
Comment on attachment 356678 [details] Patch Attachment 356678 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/10286653 New failing tests: http/tests/contentextensions/video-element-resource-type.html
EWS Watchlist
Comment 4 2018-12-05 19:23:06 PST
Created attachment 356696 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Benjamin Poulain
Comment 5 2018-12-06 18:12:08 PST
Benjamin Poulain
Comment 6 2018-12-10 19:04:06 PST
Thanks for the review!
WebKit Commit Bot
Comment 7 2018-12-10 19:43:50 PST
Comment on attachment 356774 [details] Patch Rejecting attachment 356774 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 356774, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=356774&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=192439&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 356774 from bug 192439. Fetching: https://bugs.webkit.org/attachment.cgi?id=356774 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... A LayoutTests/http/tests/contentextensions/video-element-resource-type-expected.txt A LayoutTests/http/tests/contentextensions/video-element-resource-type.html A LayoutTests/http/tests/contentextensions/video-element-resource-type.html.json M LayoutTests/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/LayoutTests/ChangeLog' is out of date W: 1793354e5f862727c1e60df871e18bb4c677d1e4 and refs/remotes/origin/master differ, using rebase: :040000 040000 a52f30f244ee5b11a9eaf431b5d4abe4f03e48be 6cccfed8e585110770ab030cbd9ab88df9a2f898 M LayoutTests :040000 040000 e6f3f5cea90883ae7bb2600729f09c146736bbb8 ac1b2f68d8ac11852e5d61c7cca99129528f2621 M Source Current branch master is up to date. Auto packing the repository in background for optimum performance. See "git help gc" for manual housekeeping. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... A LayoutTests/http/tests/contentextensions/video-element-resource-type-expected.txt A LayoutTests/http/tests/contentextensions/video-element-resource-type.html A LayoutTests/http/tests/contentextensions/video-element-resource-type.html.json M LayoutTests/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/LayoutTests/ChangeLog' is out of date W: 1793354e5f862727c1e60df871e18bb4c677d1e4 and refs/remotes/origin/master differ, using rebase: :040000 040000 a52f30f244ee5b11a9eaf431b5d4abe4f03e48be 6cccfed8e585110770ab030cbd9ab88df9a2f898 M LayoutTests :040000 040000 e6f3f5cea90883ae7bb2600729f09c146736bbb8 ac1b2f68d8ac11852e5d61c7cca99129528f2621 M Source Current branch master is up to date. Auto packing the repository in background for optimum performance. See "git help gc" for manual housekeeping. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: https://webkit-queues.webkit.org/results/10346558
WebKit Commit Bot
Comment 8 2018-12-10 21:37:32 PST
Comment on attachment 356774 [details] Patch Clearing flags on attachment: 356774 Committed r239069: <https://trac.webkit.org/changeset/239069>
WebKit Commit Bot
Comment 9 2018-12-10 21:37:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.