<rdar://problem/45296285> Content blocker rule "raw" blocks media elements from loading https://bugs.webkit.org/show_bug.cgi?id=192439

Reviewed by Dean Jackson.

Source/WebCore:

This broken when WebKit switched to NSURLSession.
In CachedResourceLoader::requestResource(), toResourceType() was turning media load into RAW.

Test: http/tests/contentextensions/video-element-resource-type.html

* loader/ResourceLoadInfo.cpp:
(WebCore::toResourceType):

LayoutTests:

* http/tests/contentextensions/video-element-resource-type-expected.txt: Added.
* http/tests/contentextensions/video-element-resource-type.html: Added.
* http/tests/contentextensions/video-element-resource-type.html.json: Added.


Canonical link: https://commits.webkit.org/207164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239069 268f45cc-cd09-0410-ab3c-d52691b4dbfc